--- a/Ej5.html
+++ b/Ej5.html
@@ -22,7 +22,7 @@
             let nombre=document.getElementById('nombre')
             let apellido=document.getElementById('apellido')
             let saludo=document.getElementById('saludo')
-            saludo.textContent="Hola{nombre}{apellido},buenos dias buena persona"
+            saludo.textContent="Hola${nombre}{apellido},buenos dias buena persona"
         }
     </script>
 </html>
