Me quedan unos cuantos por acabar

--- a/Ej2.html
+++ b/Ej2.html
@@ -54,11 +54,8 @@ let contadorEnlaces = 0;
         }
     }
     console.log("Número de enlaces de 'http://prueba':", contadorEnlaces);
-
-    
-
-    let tercerparrafo=document.querySelectorAll('p')[2]
-    let enlacetercerparrafo=tercerparrafo.querySelectorAll('a')
+    let tercerparrafo=document.querySelectorAll('p')[2];
+    let enlacetercerparrafo=tercerparrafo.querySelectorAll('a');
     console.log("Numero de enlaces en el parrafo tres",enlacetercerparrafo.length)
 }
 </script>
