--- a/Ej4.html
+++ b/Ej4.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>Ejercicio 4 - Añadir elementos a una lista</h2>
     <ul id="lista">
@@ -16,10 +18,13 @@
     </ul>
     <button onclick="anade()">Añadir Elemento</button>
 </body>
-<script> function anade() {
-    let lista = document.getElementById("lista");
-    let nuevoElemento = document.createElement("li");
-    nuevoElemento.textContent = "Nuevo elemento añadido";
-    lista.appendChild(nuevoElemento);
-}</script>
+<script>
+    function anade() {
+        let lista = document.getElementById("lista");
+        let nuevoElemento = document.createElement("li");
+        nuevoElemento.textContent = "Nuevo elemento añadido";
+        lista.appendChild(nuevoElemento);
+    }
+</script>
+
 </html>
