--- a/Ej4.html
+++ b/Ej4.html
@@ -21,8 +21,8 @@
 <script>
     function anade() {
         let lista = document.getElementById("lista");
-        let nuevoElemento = document.createElement("li");
-        nuevoElemento.textContent = "Nuevo elemento añadido";
+        let nuevoElemento = document.createElement("li")
+        nuevoElemento.textContent = "Nuevo elemento añadido"
         lista.appendChild(nuevoElemento);
     }
 </script>
