--- a/Ej5.html
+++ b/Ej5.html
@@ -19,9 +19,9 @@
 </body>
 <script>
     function mostrarMensaje() {
-        var nombre = document.getElementById("nombre").value;
-        var apellido = document.getElementById("apellido").value;
-        alert("Hola " + nombre + " " + apellido + ", buenos dias");
+        let nombre = document.getElementById("nombre").value;
+        let apellido = document.getElementById("apellido").value
+        alert("Hola " + nombre + " " + apellido + ", buenos dias")
     }
 </script>
 </html>
