--- a/ej14.html
+++ b/ej14.html
@@ -28,13 +28,13 @@
         parrafo1.style.display="none"
         });
         parrafo1.addEventListener("dbclick",function(){
-        parrafo1.remove();
+        parrafo1.remove()
         });
         parrafo2.addEventListener("click",function(){
         parrafo2.style.display="none"
         });
         parrafo2.addEventListener("dbclick",function(){
-        parrafo2.remove();
+        parrafo2.remove()
         });
         parrafo3.addEventListener("click",function(){
         parrafo3.style.display="none"
